--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -121,6 +121,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="files_and_folders">கோப்பு மற்றும் கோப்புறைகள்</string>
     <string name="document_browser">ஆவணங்களின் உலாவி</string>
     <string name="file_browser">கோப்பு உலாவி</string>
+    <string name="set_due_date">முடிவு தேதி</string>
+    <string name="insert_replace_date">தேதியை சொருகு</string>
     <string name="create_note" needed="false">குறிப்பை உருவாக்கு</string>
     <string name="special_documents" needed="false">சிறப்பு கோப்புகள்</string>
     <string name="keep_screen_on" needed="false">திரையை இயக்கத்தில் வைத்திரு</string>
@@ -188,6 +190,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="unordered_list_char_asterisk">நட்சத்திர குறி (*)</string>
     <string name="unordered_list_char_plus">கூட்டல் குறி (+)</string>
     <string name="filemanager_doesnot_supply_required_data__appspecific">Markor ஆல் உங்கள் சாதனத்தில் இருக்கும், இணையத்தொடர்பு தேவைப்படாத ஆவணங்களை மட்டுமே திருத்த முடியும் மற்றும் முழு கோப்பு பாதை வழங்காத கோப்பு மேலாளர் செயலிக்கு ஆதரவளிக்காது.</string>
+    <string name="sync_to_local_folder_notice">குறிப்பு: ஒத்திசைவு செயலிகள் ஆவணங்களை தனிப்பயன் கோப்புறைகளில் வைக்கலாம். Markor ன் ஆவண கோப்புறையை மாற்றுதல் அல்லது மற்றய கோப்பு நிர்வாகி மூலம் அவைகளை திறக்கலாம்.</string>
     <string name="configure_in_the_apps_settings">செயலியின் அமைப்புகளுடன் கட்டமைக்கவும்</string>
     <string name="vertical_alignment">செங்குத்து சீரமைப்பு</string>
     <string name="horizontal_alignment">கிடைமட்ட சீரமைப்பு</string>
@@ -222,6 +225,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="descending">இறங்கு வரிசை</string>
     <string name="ascending">ஏறுவரிசை</string>
     <string name="disable_spelling_underline">எழுத்து பிழைகளை அடிகோடிடுவதை முடக்கவும்</string>
+    <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">விசைப்பலகை பரிந்துரைகள் இருக்கும், சிவப்பு அடிக்கோடு மறைந்துவிடும்</string>
     <string name="location">இடம்</string>
     <string name="text_lines">உரை வரிகள்</string>
     <string name="text_characters">உரை எழுத்துக்கள்</string>
@@ -283,6 +287,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="appdata_private">செயலித்தரவு (தனிப்பட்டவை)</string>
     <string name="appdata_sdcard">செயலித்தரவு (நினைவக அட்டை)</string>
     <string name="internal_storage">அகச் சேமிப்பகம்</string>
+    <string name="open_the_document_from_main_view">கீழேயுள்ள பிரதான பார்வை, கோப்பு உலாவி அல்லது துவக்கியிலிருந்து ஆவணத்தைத் திறக்கலாம். பகிரப்பட்ட உரையை சேர்ப்பதற்கும் Markor ல் ஒரு விருப்ப தேர்வு உள்ளது.</string>
     <string name="notebook_is_the_home_of_your_files">குறிப்புப்புத்தகம் என்பது ஒரு கோப்புறையாகும் Markor ஆவண உலாவியில் இருந்து செயலி தொடங்கும்போது இதை ஏற்றுகிறது. இதுவே உங்கள் ஆவணங்களின் முதன்மை கோப்புறையாகும்.</string>
     <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote என்பது விரைவாக குறிப்புகளை எழுதுவதற்கு ஒரு தேர்வாகும். இது Markdown முறையில் உள்ள ஒரு ஆவணமாகும் இதன் இயல்புநிலை இடமானது &gt;Notebook/QuickNote.md&lt;, நீங்கள் இந்த ஆவணத்திற்கு வேறு ஒரு கோப்பு பாதையை அமைப்புகளில் மாற்ற முடியும்.</string>
     <string name="todo_is_the_easiest_way_">உங்கள் செயல்களை நிர்வகிக்க ToDo வகை ஆவணத்தை பயன்படுத்தவும். அது  todo.txt முறையில் உள்ள ஆவணமாகும் இதன் இயல்புநிலை இடமானது &gt;Notebook/todo.txt&lt;, நீங்கள் இந்த ஆவணத்திற்கு வேறு ஒரு கோப்பு பாதையை அமைப்புகளில் மாற்ற முடியும்.</string>
@@ -306,6 +311,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reload">திரும்ப ஏற்று</string>
     <string name="wrap_words">சொற்களை மடக்கு</string>
     <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">உரை திரை அகலத்திற்குள் பொருந்தவில்லை எனில் ஒரு மென்மையான இடைவெளியை பயன்படுத்தவும் அல்லது கிடைமட்ட சுருளும் முறையை செயல்படுத்து.</string>
+    <string name="recursive_search_in_current_directory">தற்போதைய கோப்புறையில் சுழற்சி முறையில் தேடல். வினவலில் நட்சித்திர குறி (*) இருந்தால் regex தேடல் முறை பயன்படுத்தப்பட்டுள்ளது, இல்லையெனில் வினவல் உள்ளதா என சரிபார்க்கவும்.</string>
     <string name="always_open_with_this_app">எப்போதும் இந்த செயலியை கொண்டு திறக்கவும்</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">இந்த பட்டியலில் உள்ள கோப்பு வகை நீட்சிகள் கொண்ட ஆவணங்களை இந்த செயலியை கொண்டே திறக்கவும். உதாரணமாக நீங்கள் வலை ஆவணங்களையும் மற்றும் எந்த நீட்சிகள் அற்ற ஆவணங்களையும் திருத்த விரும்பினால் \'None, .html, .css , .js\' ஆகியவற்றை பயன்படுத்துங்கள்.</string>
     <string name="template">வார்ப்புரு</string>
