--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -164,6 +164,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">Evidenţiază spaţiile la capătul liniilor care conţin două sau mai multe spaţii</string>
     <string name="use_monospace_for_code">Folosește fontul monospațiu pentru cod</string>
     <string name="disable_code_block_highlight">Dezactivează evidențierea pentru blocuri de cod</string>
+    <string name="auto_renumber_ordered_list">Auto-renumărare liste ordonate</string>
+    <string name="auto_renumber_ordered_list_slowdown">Această opțiune poate afecta performanța aplicațiilor.</string>
     <string name="use_different_fonttype_slow_down">Folosiți un tip diferit de font. Schimbarea acestuia are un impact dinamic asupra performanței aplicației.</string>
     <string name="general">Generalități</string>
     <string name="resources">Resurse</string>
