--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -164,6 +164,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">Mettre en valeur les espaces en fin de ligne, à partir de deux espaces</string>
     <string name="use_monospace_for_code">Utiliser une police à chasse fixe pour le code</string>
     <string name="disable_code_block_highlight">Désactiver la mise en surbrillance des blocs de code</string>
+    <string name="auto_renumber_ordered_list">Renuméroter automatiquement les listes ordonnées</string>
+    <string name="auto_renumber_ordered_list_slowdown">Cette option peut affecter les performances de l\'application.</string>
     <string name="use_different_fonttype_slow_down">Utiliser une police du type différent. Changer dynamiquement de police de caractères a des conséquences sur les performances de l\'application.</string>
     <string name="general">Général</string>
     <string name="resources">Ressources</string>
