--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -164,6 +164,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">Hervorheben jener Zeilen die mit zwei oder mehr Leerzeichen enden</string>
     <string name="use_monospace_for_code">Monospace Schriftart für Code</string>
     <string name="disable_code_block_highlight">Hervorheben von Code-Blöcken deaktivieren</string>
+    <string name="auto_renumber_ordered_list">Sortierte Listen automatisch umbenennen</string>
+    <string name="auto_renumber_ordered_list_slowdown">Diese Option kann die Leistung der App beeinflussen.</string>
     <string name="use_different_fonttype_slow_down">Verwenden eines anderen Font Typs. Die dynamische Veränderung des Font Types beinflusst die Performance der App.</string>
     <string name="general">Allgemeines</string>
     <string name="resources">Ressourcen</string>
