--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -164,6 +164,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">Markeer spaties aan het einde van de regel met meer dan twee spaties</string>
     <string name="use_monospace_for_code">Gebruik monospace lettertype voor code</string>
     <string name="disable_code_block_highlight">Markering voor codeblokken uitschakelen</string>
+    <string name="auto_renumber_ordered_list">Geordende lijsten automatisch hernoemen</string>
+    <string name="auto_renumber_ordered_list_slowdown">Deze optie kan invloed hebben op de app-prestaties.</string>
     <string name="use_different_fonttype_slow_down">Maak gebruik van een ander lettertype. Veranderen ervan heeft een dynamisch effect op de app prestaties.</string>
     <string name="general">Algemeen</string>
     <string name="resources">Bronnen</string>
