--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -164,7 +164,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">Resaltar los espacios al final de las líneas si estas terminan en dos o más espacios</string>
     <string name="use_monospace_for_code">Usar espaciado sencillo para código</string>
     <string name="disable_code_block_highlight">Desactivar resaltado para bloques de código</string>
-    <string name="auto_renumber_ordered_list">Auto-renumerar listas de pedidos</string>
+    <string name="auto_renumber_ordered_list">Renumerar automáticamente las listas ordenadas</string>
     <string name="auto_renumber_ordered_list_slowdown">Esta opción puede afectar al rendimiento de la aplicación.</string>
     <string name="use_different_fonttype_slow_down">Usa una fuente diferente. Cambiar la fuente dinámicamente afecta el desempeño de la app.</string>
     <string name="general">General</string>
