--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -164,6 +164,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">İki veya daha fazla boşluk içeren satırların sonundaki boşlukları vurgula</string>
     <string name="use_monospace_for_code">Kod için monospace kullan</string>
     <string name="disable_code_block_highlight">Kod kalıpları için vurgulamayı devre dışı bırak</string>
+    <string name="auto_renumber_ordered_list">Sıralı listeleri otomatik olarak yeniden numaralandır</string>
+    <string name="auto_renumber_ordered_list_slowdown">Bu seçenek uygulama performansını etkileyebilir.</string>
     <string name="use_different_fonttype_slow_down">Farklı bir yazı tipi türünü kullan. Yazı tipi türünü dinamik olarak değiştirmek, uygulamanın performansını etkiler.</string>
     <string name="general">Genel</string>
     <string name="resources">Kaynaklar</string>
