--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -121,8 +121,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="files_and_folders">Arquivos e pastas</string>
     <string name="document_browser">Navegador de documentos</string>
     <string name="file_browser">Gerenciador de arquivos</string>
-    <string name="set_due_date">Definir data limite</string>
-    <string name="insert_replace_date">Insert date</string>
+    <string name="set_due_date">Definir data de vencimento</string>
+    <string name="insert_replace_date">Insira data</string>
     <string name="create_note" needed="false">Criar nota</string>
     <string name="special_documents" needed="false">Documentos especiais</string>
     <string name="keep_screen_on" needed="false">Manter a tela ligada</string>
