--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -164,6 +164,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">Підсвічувати пробіли в кінці рядків, що містять щонайменше два пробіли</string>
     <string name="use_monospace_for_code">Використовувати моноширинний шрифт для коду</string>
     <string name="disable_code_block_highlight">Вимкнути підсвічування для блоків коду</string>
+    <string name="auto_renumber_ordered_list">Автоматична зміна нумерованих списків</string>
+    <string name="auto_renumber_ordered_list_slowdown">Цей параметр може вплинути на продуктивність додатку.</string>
     <string name="use_different_fonttype_slow_down">Використовувати різні шрифти. Динамічна зміна шрифту впливає на продуктивність додатку.</string>
     <string name="general">Загальне</string>
     <string name="resources">Ресурси</string>
