[ci skip] Crowdin translation bot: New translations for French

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -331,25 +331,25 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="tools">Outils</string>
     <string name="reading">Lecture</string>
     <string name="read">Lire</string>
-    <string name="table">Table</string>
-    <string name="how_much_columns_press_table_button_long_to_start_table">Combien de colonnes ? Appuyez sur le bouton de table pour démarrer une table (en-tête d\'insertion), appuyez sur court pour ajouter une ligne.</string>
-    <string name="example_of_a_markdown_table">Exemple de table Markdown</string>
+    <string name="table">Tableau</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">Combien de colonnes ? Appuyez sur le bouton du tableau pour commencer un nouveau tableau (insertion d\'entête), appuyez sur \"short\" court pour ajouter une ligne.</string>
+    <string name="example_of_a_markdown_table">Exemple de tableau Markdown</string>
     <string name="delete_lines">Supprimer les lignes</string>
     <string name="unordered_list">Liste non ordonnée</string>
     <string name="ordered_list">Liste ordonnée</string>
-    <string name="check_list">Liste de vérification</string>
+    <string name="check_list">Liste de contrôle</string>
     <string name="open_link">Ouvrir le lien</string>
     <string name="common_color_picker">Sélecteur de couleurs</string>
     <string name="date_and_time">Date et heure</string>
     <string name="jump_to_bottom">Aller en bas</string>
-    <string name="quote">Devis</string>
+    <string name="quote">Citation</string>
     <string name="heading">Titre</string>
     <string name="heading_1">Titre 1</string>
     <string name="heading_2">Titre 2</string>
     <string name="heading_3">Titre 3</string>
     <string name="bold">Gras</string>
     <string name="italic">Italique</string>
-    <string name="strikeout">Retrait</string>
+    <string name="strikeout">Barré</string>
     <string name="inline_code">Code en ligne</string>
     <string name="horizontal_line">Ligne horizontale</string>
     <string name="toggle_done">Basculer terminé</string>
