[ci skip] Crowdin translation bot: New translations for Indonesian

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -98,8 +98,30 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="todo_list">Daftar kehendak</string>
     <string name="task">Tugas</string>
     <string name="category">Kategori</string>
+    <string name="context">Konteks</string>
+    <string name="list">Daftar</string>
+    <string name="priority">Prioritas</string>
+    <string name="history">Riwayat</string>
     <string name="sync">Selaraskan</string>
     <string name="search_or_custom">Cari atau sesuaikan</string>
+    <string name="save">Simpan</string>
+    <string name="update">Perbarui</string>
+    <string name="clear">Hapus</string>
+    <string name="due_date">Batas waktu</string>
+    <string name="current_date">Tanggal Saat ini</string>
+    <string name="archive">Arsip</string>
+    <string name="add_task">Tambahkan tugas</string>
+    <string name="add_x_witharg">Tambahkan %s</string>
+    <string name="document_to_be_loaded_and_saved_as_witharg">Dokumen akan dimuat dan disimpan sebagai \"%s\"</string>
+    <string name="refresh">Segarkan</string>
+    <string name="create_shortcut">Buat pintasan</string>
+    <string name="tried_to_create_shortcut_for_this_notice">Mencoba membuat pintasan ke layar beranda Anda. Beberapa peluncur mungkin tidak mendukung fitur ini.</string>
+    <string name="file_not_in_save_path_do_import_notice__appspecific">File yang dipilih tidak terletak di direktori catatan aplikasi. Apakah Anda ingin menyalinnya ke folder saat ini? Tindakan ini akan menimpa file yang ada dengan nama yang sama.</string>
+    <string name="file_not_in_current_folder_do_copy__appspecific">Berkas tidak terletak di folder saat ini. Apakah Anda ingin menyalinnya ke folder saat ini? Ini akan menimpa berkas yang ada dengan nama yang sama.</string>
+    <string name="files_and_folders">Berkas dan direktori</string>
+    <string name="document_browser">Penjelajah dokumen</string>
+    <string name="file_browser">Penjelajah berkas</string>
+    <string name="set_due_date">Atur batas waktu</string>
     <string name="control_font_size_in_editor">Atur ukuran huruf yang pada editor</string>
     <string name="textactions_show_useful_actions_description__appspecific">Tampilkan bilah dengan tombol praktis di bawah. Aksi teks ini mengubah teks atau menjalankan aksi berdasar teks.</string>
     <string name="load_last_opened_folder_at_startup">Muat folder yang dibuka terakhir</string>
